# poa-governance-notifications

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  sample.env
abis/core/: keys.json  proxy.json  threshold.json
abis/sokol/: proxy.json
abis/v2/: VotingToManageEmissionFunds.abi.json
src/: blockchain.rs  cli.rs  client.rs  config.rs  error.rs  logger.rs  logging.rs  main.rs  notify.rs  rpc.rs  utils.rs
src/response/: common.rs  v1.rs  v2.rs
