[package]
name = "poagov"
version = "2.0.0"
authors = ["DrPeterVanNostrand <jnz@riseup.net>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/poanetwork/poa-governance-notifications"
publish = false
description = "A POA Network email notification service for on-chain voting/governance events"
build = "build.rs"

[dependencies]
chrono = "0.4.6"
clap = "2.32.0"
ctrlc = "3.1.1"
dotenv = "0.13.0"
ethabi = "6.0.1"
ethereum-types = "0.4.0"
failure = "0.1.2"
hex = "0.3.2"
jsonrpc-core = "8.0.1"
lazy_static = "1.2.0"
# TODO: after `lettre` and `lettre_email` v0.9.x have been published to crates.io, remove these
# GitHub dependencies.
lettre = { git = "https://github.com/lettre/lettre.git" }
lettre_email = { git = "https://github.com/lettre/lettre.git" }
native-tls = "0.2"
reqwest = "0.8.8"
serde_json = "1.0.27"
slog = { version = "2.3.3", features = ["release_max_level_trace"] }
slog-term = "2.4.0"
web3 = "0.4.0"
